@@ -1,3 +1,9 @@
+2004-08-30  Phil Edwards  <phil@codesourcery.com>
+
+	* docs/html/install.html:  Update locales list (from Paolo).
+	Remove other redundant information and point to the GCC install
+	documentation.
+
 2004-08-30  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* include/ext/pool_allocator.h: Rename __pool_base to
